--- a/frontend/sass/base/_utilities.scss
+++ b/frontend/sass/base/_utilities.scss
@@ -80,6 +80,14 @@
 	& .navbar__dropdown {
 		height: 0 !important;
 	}
+
+	& .navbar__button {
+		box-shadow: none;
+	}
+
+	& .navbar__item {
+		box-shadow: none;
+	}
 }
 
 .transparent {
