--- a/frontend/sass/components/_github.scss
+++ b/frontend/sass/components/_github.scss
@@ -1,7 +1,7 @@
 .github {
 	border-radius: 50%;
 	border: 1px solid transparent;
-	box-shadow: $navbar-box-shadow-resume;
+	box-shadow: $navbar-box-shadow-normal;
 	font-family: $font-family-text;
 	font-size: 1vw;
 	position: relative;
